--- a/index.css
+++ b/index.css
@@ -3,7 +3,7 @@ main {
   margin: 0 auto;
 }
 
-.resume{
+.resume {
   text-align: center;
 }
 
@@ -33,7 +33,7 @@ main {
   text-transform: uppercase;
 }
 
-.profession{
+.profession {
   width: 150px;
   height: 150px;
   margin: 20px auto;
@@ -63,15 +63,15 @@ h3 {
   font-style: italic;
 }
 
-.mobileLink:before{
+.mobileLink:before {
   content: "\260E";
 }
 
-.emailLink:before{
+.emailLink:before {
   content: "\2709";
 }
 
-.gitHubLink:before{
+.gitHubLink:before {
   content: "\2713";
 }
 
@@ -84,7 +84,7 @@ ol li::before {
   color: #5ba7d1;
 }
 
-ul{
+ul {
   list-style-type: none;
 }
 
@@ -103,19 +103,19 @@ ul li::before {
   background-color: #335384;
 }
 
-a{
+a {
   text-decoration: none;
 }
 
-a:link{
+a:link {
   color: #444440;
 }
 
-a:visited{
+a:visited {
   color: #90908e;
 }
 
-a:hover{
+a:hover {
   box-shadow: 0 2px 20px 0 rgba(0, 0, 0, 0.5);
 }
 
@@ -126,48 +126,49 @@ img {
   margin: 20px auto;
 }
 
-p{
+p {
   color: #444440;
   font-size: 16px;
 }
 
-.university, .courses{
+.university,
+.courses {
   padding: 10px;
   line-height: 23px;
 }
 
-.rightSection{
+.rightSection {
   display: flex;
   flex-direction: column;
   flex: 5;
   padding: 10px;
 }
 
-article{
+article {
   white-space: break-spaces;
 }
 
-span{
+span {
   font-style: italic;
 }
 
-.toDoList{
+.toDoList {
   color: #357944;
   font-weight: 600;
   letter-spacing: 0.1em;
   font-size: 14px;
   height: 40px;
-	width: 150px;
-	padding: 5px 5px 10px 5px;
-	margin: 20px;
-	border-radius: 11px;
+  width: 150px;
+  padding: 5px 5px 10px 5px;
+  margin: 20px;
+  border-radius: 11px;
   box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.2);
 }
 
-.toDoList:hover{
+.toDoList:hover {
   box-shadow: none;
 }
 
-.toDoList:visited{
+.toDoList:visited {
   color: #54b96a;
 }
